@@ -1,5 +1,6 @@
 bin_PROGRAMS = rsyncrypto
 noinst_PROGRAMS = blocksizes
+man1_MANS = rsyncrypto.man
 
 rsyncrypto_SOURCES = main.cc crypto.cc crypt_key.cc aes_crypt.cc file.cc
 blocksizes_SOURCES = crypt_key.cc aes_crypt.cc blocksizes.cc
